1999-12-20  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mel-b-el.el (base64-encode-string): Allow the optional second arg
	`no-line-break'.

1999-12-16  Keiichi Suzuki  <keiichi@nanap.org>

	* eword-decode.el (eword-decode-structured-field-body): When error
	occures while parsing structure, force decode field body as
	unstructured field.
	(eword-decode-and-unfold-structured-field-body): Likewise.
	(eword-decode-and-unfold-structured-field-body): Likewise.
	(eword-decode-and-fold-structured-field-body): Likewise.

	* mime-parse.el: Add author.
	* mime-def.el: Ditto.

1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en,README.ja,mime-en.sgml,mime-en.texi,mime-ja.sgml,
	mime-ja.texi: Update for the recent ML address and ftp site.

1999-11-27  Keiichi Suzuki  <keiichi@nanap.org>

	* mime-parse.el (mime-parse-parameters): Strip `quoted-pair'.

	* mime-def.el (mime-parameter-value): Fix `replace-match' error
	at decoding `ext-octet'. And fix typo.

1999-11-24  Keiichi Suzuki  <keiichi@nanap.org>

	* mime-parse.el (mime-parse-parameters-from-list): Downcase
	attribute name.

1999-11-24  Keiichi Suzuki  <keiichi@nanap.org>

	* mime-parse.el (mime-parse-parameters): Use
	`mime-parse-parameters-from-list'.
	(mime-parse-parameters-from-list): New function.

1999-11-24  Keiichi Suzuki  <keiichi@nanap.org>

	* mime-parse.el (mime/content-parameter-value-regexp): Abolished.
	(mime::attribute-char-regexp): Ditto.
	(mime::attribute-regexp): Ditto.
	(mime::ext-octet-regexp): Ditto.
	(mime::extended-other-values-regexp): Ditto.
	(mime::extended-initial-value-regexp): Ditto.
	(mime::parameter-regexp): Ditto.
	(mime-parse-parameters-skip-to-next-token): New function.
	(mime-parse-parameters): New implementation.

	* mime-def.el (mime-parameter-set-raw-values): New inline function.
	(mime-parameter-value): Don't break original `raw values'.

1999-11-05  Keiichi Suzuki  <keiichi@nanap.org>

	* eword-decode.el (eword-encoded-word-regexp): Match with
	RFC-2231.